clusters/my-cluster/apps/frontend.yaml
# clusters/my-cluster/frontend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 2 # 안정성을 위해 2개의 Pod 실행
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/jth0809/personal_project/frontend@sha256:3d6407d77d8fd7d3463bcbf5dab0ff77bed30facf2c842e3c06adc70767393de
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc # 서비스 이름
  namespace: default
spec:
  type: ClusterIP # 클러스터 내부에서만 접근 가능한 타입
  selector:
    app: frontend # app=frontend 라벨을 가진 Pod들에게 트래픽 전달
  ports:
    - protocol: TCP
      port: 80 # 이 서비스는 80번 포트로 접근
      targetPort: 3000 # Pod의 3000번 포트로 트래픽 전달
